Fixing image stretching issue(?)

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 .avatar {
     border-radius: 50%;
     max-width: 25%;
+    max-height: 25%;
     margin: 0 0 6px 0;
 }
 
